# vasp-processing

./: BSEband.py  Bandstructure.py  CHGadder.py  CrSBr_BS_Comp.py  DFT_BandDrawer.py  DFT_Output.py  DFT_Output_tester.py  LICENCE  Orbital_Composition.py  README.md  RewriteProcar.py  bsefatbands.py  charge_density_3D.py  effective_masses.py  environment.yml  job.sh  matrix_artists.py  matrix_postprocess.py  modify_struct.py  post_script.py  prepare_calc.py  prepare_for_SOD.py  pyproject.toml  types_of_tasks.txt  use_SOD.sh  vaspout_h5.py
Toolkit/Postprocessing/: Artists.py
postprocessing/: Artists.py  InformationCollector.py  Plotting.py  matrix_artists.py  matrix_postprocess.py  post_script.py  vaspout_h5.py
recipe/: build.sh  meta.yaml
slurm-pred/: config_scp.yaml  hold_time.py  hold_time.py_org  job_class.py  list_nodes.py  read_steps.py  requirements.txt  slurm_create.py  steps.yaml  test-job.sh  toolkit.py
src/dft_toolbox/: __init__.py  read_steps.py
src/dftbox/: __init__.py  cli.py  dft_toolkit.py  job_class.py  slurm_waiting_prediction.py
src/vasp_toolbox/: __init__.py  parsers.py  set_parallel.py  steps.yaml
tests/: test_import.py
toolkit/: DFT-toolkit_README.md  README.md  defaults.py  dft_toolkit.py  input.py  job_class.py  list_nodes.py  parsers.py  read_steps.py  requirements.txt  run_local.py  set_parallel.py  slurm_waiting_prediction.py  step01.sh  step02.sh  step03.sh  step04.sh  step05.sh  step06.sh  step07.sh  step08.sh  step09.sh  steps.yaml  toolkit.py  toolkit_v2.py
toolkit/Postprocessing/: Artists.py  BS_report_post.py  Plotting.py  (+8 more)
(+178 files in other folders)
